<resources>
    <string name="app_name">Gabbi \nCosmetology</string>

    <string name="app_name_use_app">Gabbi Cosmetology</string>
    <!-- TODO: error general -->
    <string name="error_session">Oh oh, hubo un problema</string>
    <string name="error_general">No pudimos continuar con el proceso que realizabas. Inténtalo nuevamente.</string>
    <string name="error_internet_description">Revisa tu conexión y vuelve a intentarlo.</string>
    <string name="user_unauthorized_title">Tu sesión ha expirado</string>
    <string name="user_unauthorized_description">Estuviste inactivo por unos minutos. Por favor, vuelve a iniciar sesión.</string>
    <string name="error_general_title">Lo sentimos, ocurrió un error</string>
    <string name="error_internet">No hay conexión a internet</string>
    <string name="error_denied_camera">Necesitas este permiso para poder realizar este proceso</string>
    <string name="do_not_have_permission_to_location">No tiene permisos para acceder a tu ubicación</string>
    <string name="base_location_description">Para obtener resultados más precisos debes ir a la configuración de tu celular y activar el permiso.</string>


    <!-- TODO: text label pop up-->

    <string name="text_pop_up_inactivate_account">Estas segura que deseas desactivar tu cuenta temporalmente</string>
    <string name="text_pop_up_delete_account">Estas segura de eliminar tu cuenta definitivamente todo tus datos se borraran</string>


    <!-- TODO: text label snack bar-->

    <string name="text_update_profile">Sus datos de actualizarón correctamente</string>

    <!-- TODO: error label -->
    <string name="error_email_format">El formato de correo ingresado no es valido</string>
    <string name="error_image_update">Error al subir la imagen</string>

    <!-- TODO: text snackBar label -->

    <string name="text_message_profile_photo">Puedes actualizar tus imagenes tocando las imagenes</string>
    <string name="text_success_profile_photo">Se actualizo la imagen de perfil</string>
    <string name="text_success_profile_banner__photo">Se actualizo la imagen de biografia</string>

    <!-- TODO: text button-->
    <string name="dialog_accept">Aceptar</string>
    <string name="txt_cancel_btn">Cancelar</string>
    <string name="txt_confirm">Confirmar</string>
    <string name="txt_continue">Continuar</string>
    <string name="txt_end_up">Terminar</string>
    <string name="progress_button_loading">Loading…</string>
    <string name="txt_save">Guardar</string>
    <string name="txt_delete_user"><u>Eliminar cuenta</u></string>
    <string name="txt_deactivate_user"><u>Desactivar cuenta</u></string>
    <string name="base_location_button">Ir a configuración</string>


    <!-- TODO: text label pop up-->
    <string name="Select_option">Select Option:</string>
    <string name="text_update_data_param">Deseas seguir actualizando</string>
    <string name="text_des_update_data_param">El proceso se realizo satisfactoriamente, elige si deseas continuar o deseas salir</string>
    <string name="txt_logout_des">¿Estás seguro que deseas cerrar sesión?</string>


    <!-- TODO: text label pop up-->
    <string name="txt_title_splash">BIENVENIDA</string>
    <string name="txt_subtitle_splash">MIRA TU CATALOGO AHORA</string>
    <string name="register">¿Eres nuevo? Registrate</string>
    <string name="text_register">Registrate</string>
    <string name="text_email">Correo electronico</string>
    <string name="text_password">Contraseña</string>
    <string name="text_name">Nombres</string>
    <string name="text_name_single">Nombre</string>
    <string name="text_phone">Telefono</string>
    <string name="text_address">Dirección</string>
    <string name="text_title">Titulo</string>
    <string name="text_last_name">Apellidos</string>
    <string name="txt_forget_password"><u>Olvidaste Contraseña</u></string>
    <string name="txt_confirm_address">Confirmar dirección</string>


    <!-- TODO: text menu and tab-->
    <string name="txt_home">Inicio</string>
    <string name="txt_product">Producto</string>
    <string name="txt_order">Pedido</string>
    <string name="txt_admin">Admin</string>
    <string name="txt_menu_category">Categoria</string>
    <string name="txt_menu_product">Producto</string>

    <string name="txt_menu_profile">Perfil</string>
    <string name="txt_menu_favorite">Favoritos</string>
    <string name="txt_menu_map">Mapa</string>
    <string name="txt_menu_other">T &amp; C</string>
    <string name="txt_menu_logout"><u>Cerrar sesión</u></string>
    <string name="txt_menu_facebook">Facebook</string>
    <string name="text_test">Gabriela Soledad</string>
    <string name="text_description_begin">Bienvenida(o) aqui encontraras videos referenciales de algunos establecimientos</string>
    <string name="title_activity_adress">Map</string>
    <string name="text_title_dat_user_profile"><u>Datos Personales</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_rb_inactivate">Desactivar</string>
    <string name="text_rb_activate">Activar</string>
    <string name="text_title_register_param">Active o desactive el registro</string>
    <string name="text_title_register_category">Active o desactive la categoria</string>
    <string name="text_title_recommend_Category">Active o desactive la recomendación</string>
    <string name="text_hint_description">escribe descripción aqui</string>
    <string name="text_title_description">Agrege una descripcion</string>
    <string name="text_title_param">Aqui puedes configurar los paramtros de inicio</string>
    <string name="text_date_piker_title">Fecha</string>
    <string name="text_item_tab_param">Parametros</string>
    <string name="text_item_tab_movie">Video</string>
    <string name="text_item_tab_banner">Banner</string>
    <string name="text_title_banner_admin">Aqui puedes configurar los banner de inicio</string>
    <string name="text_title_video_admin">Agrega los videos para el inicio de la appilcacion</string>
    <string name="text_message_test_add_img_banner">Te recomendamos agregar una imagen de similar medida de ancho y altura</string>


    <string name="text_toolbar_category_add">Agregar categoria</string>
    <string name="text_toolbar_config">Configuraciones</string>
    <string name="text_description_add_category">Aqui Puedes agregar las categorias que apareceran en el la vista principal</string>
    <string name="whatsapp_not_found">No tienes WhatsApp</string>

</resources>